<?xml version="1.0"?>
<package>
  <name>visp_bridge</name>
  <version>0.13.1</version>
  <description>
    Converts between ROS structures and ViSP structures.
  </description>

  <author>Filip Novotny</author>
  <maintainer email="Fabien.Spindler@inria.fr">Fabien Spindler</maintainer>

  <license>GPLv2</license>

  <url>http://wiki.ros.org/visp_bridge</url>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- catkin_lint produce an error arround build_depend visp. -->
  <!-- This error shouldn't be considered. If build_depend visp is removed, -->
  <!-- the package is not able to build on ros buildfarm. -->
  <build_depend>visp</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>

  <run_depend>rclcpp</run_depend>
  <run_depend>rclcpp_components</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visp</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  
  <export>
   <build_type>ament_cmake</build_type>
 </export>

</package>
