<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package  format="3">
  <name>visp_hand2eye_calibration</name>
  <version>0.13.1</version>

  <description>
     visp_hand2eye_calibration estimates the camera position with respect
     to its effector using the ViSP library.
  </description>
  <author>Filip Novotny</author>
  <maintainer email="Fabien.Spindler@inria.fr">Fabien Spindler</maintainer>
  <license>GPLv2</license>
  <url>http://wiki.ros.org/visp_hand2eye_calibration</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>visp_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- catkin_lint produce an error arround build_depend visp. -->
  <!-- This error shouldn't be considered. If build_depend visp is removed, -->
  <!-- the package is not able to build on ros buildfarm. -->
  <build_depend>visp</build_depend>
  <build_depend>rosidl_interface_packages</build_depend>

  <exec_depend>visp_bridge</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visp</exec_depend>
  <exec_depend>rosidl_interface_packages</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
  </export>
</package>
