<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package  format="3">
  <name>visp_tracker</name>
  <version>0.13.1</version>
  <description>
    Wraps the ViSP moving edge tracker provided by the ViSP visual
    servoing library into a ROS package.

    This computer vision algorithm computes the pose (i.e. position
    and orientation) of an object in an image. It is fast enough to
    allow object online tracking using a camera.
  </description>
  <maintainer email="fabien.spindler@inria.fr">Fabien Spindler</maintainer>
  <author email="thomas.moulard@gmail.com">Thomas Moulard</author>
  <license>GPLv2</license>
  <url>http://wiki.ros.org/wiki/visp_tracker</url>
  <url type="repository">git://github.com/lagadic/vision_visp.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>rosidl_interface_packages</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>tf2</build_depend>
  <!-- catkin_lint produce an error arround build_depend visp. -->
  <!-- This error shouldn't be considered. If build_depend visp is removed, -->
  <!-- the package is not able to build on ros buildfarm. -->
  <build_depend>visp</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_interface_packages</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>resource_retriever</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>visp</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
